<package>
  <name>behavior_explorationconcurrency</name>
  <version>1.0.0</version>
  <description>
     Concurrency Test for Exploration
  </description>
  <maintainer email="todo@todo.com">Elisa Gabriel</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_explorationconcurrency</url>
  <author>Elisa Gabriel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>hector_flexbe_states</run_depend>
  <run_depend>flexbe_states</run_depend>

</package>