<package>
  <name>behavior_explore</name>
  <version>1.0.0</version>
  <description>
     Explores and creates a map of it's surroundings
  </description>
  <maintainer email="todo@todo.com">Gabriel und Elisa</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_explore</url>
  <author>Gabriel und Elisa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>hector_flexbe_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>

</package>