<package>
  <name>behavior_explore_and_search_victims_using_arm</name>
  <version>1.0.0</version>
  <description>
     Explore and search victims
  </description>
  <maintainer email="todo@todo.com">Elisa und Gabriel</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_explore_and_search_victims_using_arm</url>
  <author>Elisa und Gabriel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>hector_flexbe_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>

</package>