<package>
  <name>behavior_hello_world_demo</name>
  <version>1.0.0</version>
  <description>
     Behavior Tutorial
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_hello_world_demo</url>
  <author>Elisa Strauch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_argos_states</run_depend>

</package>