<package>
  <name>behavior_set_points</name>
  <version>1.0.0</version>
  <description>
     All steps which need to be done during startup
  </description>
  <maintainer email="todo@todo.com">Gabriel</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_set_points</url>
  <author>Gabriel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>hector_flexbe_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_states</run_depend>

</package>