<package>
  <name>behavior_simplemissionstartcheck</name>
  <version>1.0.0</version>
  <description>
     Perform the Startcheck at the beginning of each Preliminary Task
  </description>
  <maintainer email="todo@todo.com">Gabriel und Elisa</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_simplemissionstartcheck</url>
  <author>Gabriel und Elisa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>hector_flexbe_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>

</package>