<package>
  <name>behavior_victimapproach</name>
  <version>1.0.0</version>
  <description>
     Exploration und GetCloser verbinden
  </description>
  <maintainer email="todo@todo.com">Elisa und Gabriel</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_victimapproach</url>
  <author>Elisa und Gabriel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>hector_flexbe_states</run_depend>

</package>